# FLIPKART-PRODUCT-RECOMMENDER-SYSTEM

./: Dockerfile  pyproject.toml  setup.py
flipkart/: config.py  data_converter.py  data_ingestion.py  rag_chain.py
flipkart_product_recommender_system.egg-info/: PKG-INFO  SOURCES.txt
