[project]
name = "flipkart-product-recommender-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.2",
    "flask>=3.1.3",
    "langchain>=1.2.12",
    "langchain-astradb>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "pandas>=3.0.1",
    "prometheus-client>=0.24.1",
    "pypdf>=6.9.1",
    "python-dotenv>=1.2.2",
]
